# makai-llm

./: .gitignore  Cargo.nix  Cargo.toml  Justfile  README.md  flake.nix  makai_state.json  prompt.txt  shell.nix  words.txt
src/: ai.rs  commands.rs  context.rs  main.rs  utils.rs
src/commands/: chat.rs  remember.rs  reply.rs  reset.rs
