[package]
name = "makai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
ctrlc = { version = "3.5.1", features = ["termination"] }
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.14.0"
llm = "1.3.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = "0.12.4"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

